try to fix layout on ios

--- a/style.css
+++ b/style.css
@@ -29,10 +29,11 @@ body {
 /* game content */
 #game {
   width: 100%;
-  padding: 10px;
   padding-top: 300px;
-  padding-left: 16px;
-  padding-right: 16px;
+
+  padding-left: calc(10px + env(safe-area-inset-left));
+  padding-right: calc(10px + env(safe-area-inset-right));
+  padding-bottom: env(safe-area-inset-bottom);
 
   position: relative;
 }
